--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["‘Timothy <‘Timothy.viccari@gmail.com’>"]
 python = "^3.8"
 Django = "^3.2.4"
 djangorestframework = "^3.12.4"
+psycopg2-binary = "^2.9.1"
 
 
 [tool.poetry.dev-dependencies]
