--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "^3.12.4"
 psycopg2-binary = "^2.9.1"
 djangorestframework-simplejwt = "^4.7.1"
 gunicorn = "^20.1.0"
+whitenoise = "^5.2.0"
 
 
 [tool.poetry.dev-dependencies]
