--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ psycopg2-binary==2.9.1; python_version >= "3.6"
 pyjwt==2.1.0; python_version >= "3.7"
 pytz==2021.1; python_version >= "3.6"
 sqlparse==0.4.1; python_version >= "3.6"
+whitenoise==5.2.0; python_version >= "3.5" and python_version < "4"
